--- a/src/partials/search-form.html
+++ b/src/partials/search-form.html
@@ -1,8 +1,18 @@
-<form class="search-form" id="search-form">
-  <input type="text" name="query" autocomplete="off" placeholder="Search images..." />
-</form>
+<section class="section-photo">
+  <div class="container">
+    <form class="search-form" id="search-form">
+      <input
+        type="text"
+        name="query"
+        autocomplete="off"
+        placeholder="Search images..."
+        class="input-search"
+      />
+    </form>
 
-<ul class="gallery" id="gallery">
-  <!-- Список <li> с карточками изображений -->
-</ul>
-<button type="button" id="show-btn">Показать ещё</button>
+    <ul class="gallery" id="gallery">
+      <!-- Список <li> с карточками изображений -->
+    </ul>
+    <button type="button" id="show-btn" class="show-btn hidden" disabled>Показать ещё</button>
+  </div>
+</section>
