--- a/src/templates/card-image.hbs
+++ b/src/templates/card-image.hbs
@@ -1,7 +1,7 @@
 {{#each this}}
-<li class="gallery__item" id="scroll">
+<li class="gallery__item" >
   <div class="photo-card">
-    <img src="{{webformatURL}}" alt="{{tags}}" width="{{webformatWidth}}" height="{{webformatHeight}}"/>
+    <img src="{{webformatURL}}" alt="{{tags}}" width="{{webformatWidth}}" height="{{webformatHeight}}" data-source="{{largeImageURL}}"/>
   
     <div class="stats">
       <p class="stats-item">
