--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,14 +1,10 @@
-ul {
-  list-style: none;
-}
-
 .section-photo {
   padding: 60px 0;
 }
 .search-form {
   margin-bottom: 30px;
   text-align: center;
-  margin-bottom: 6т0px;
+  margin-bottom: 60px;
 }
 
 .show-btn {
@@ -16,38 +12,15 @@ ul {
   margin-left: auto;
   margin-right: auto;
   height: 50px;
-  width: 280px;
+  width: 200px;
   border-radius: 15px;
-  background-color: lightcoral;
-}
-.container {
-  max-width: 1200px;
-  padding: 0 20px;
-  margin-left: auto;
-  margin-right: auto;
+  color: rgba(255, 225, 0, 0.993);
+  background-color: rgb(117, 8, 117);
 }
 
-.gallery {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  margin-top: -30px;
-  margin-left: -30px;
-}
-.gallery__item {
-  flex-basis: calc((100% - 4 * 30px) / 4);
-  margin-top: 20px;
-  margin-left: 20px;
-}
-
-body {
-  background-color: antiquewhite;
-}
-
-img {
-  display: block;
-  width: 100%;
-  height: 100%;
+.show-btn:hover,
+.show-btn:focus {
+  transform: scale(1.1);
 }
 
 .input-search {
@@ -55,16 +28,29 @@ img {
   height: 30px;
   border-radius: 5px 15px 5px 15px;
   border-width: 2px;
-  background-color: rgb(233, 233, 233);
+  color: rgba(255, 225, 0, 0.993);
+  font-size: 20px;
+  background-color: rgb(117, 8, 117);
 }
 
-.hidden {
-  position: absolute !important;
-  clip: rect(1px 1px 1px 1px);
-  clip: rect(1px, 1px, 1px, 1px);
-  padding: 0 !important;
-  border: 0 !important;
-  height: 1px !important;
-  width: 1px !important;
-  overflow: hidden;
+.button-up {
+  position: fixed;
+  bottom: 50px;
+  right: 50px;
+
+  width: 40px;
+  height: 40px;
+  background-color: rgb(255, 238, 2);
+  border: none;
+  border-radius: 50%;
+  transition: transform 255ms cubic-bezier(0.1, 0.3, 0.4, 0.5);
+  display: none;
+}
+
+.button-up:hover {
+  transform: scale(1.1);
+}
+
+.button-up.show {
+  display: block;
 }
