--- a/src/partials/search-form.html
+++ b/src/partials/search-form.html
@@ -13,7 +13,7 @@
     <ul class="gallery" id="gallery">
       <!-- Список <li> с карточками изображений -->
     </ul>
-    <button type="button" id="to-up" class="button-up">Вверх</button>
+    <button type="button" id="to-up" class="button-up">UP</button>
     <button type="button" id="show-btn" class="show-btn hidden" disabled>Показать ещё</button>
   </div>
 </section>
