--- a/src/sass/_card.scss
+++ b/src/sass/_card.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
   margin-top: -40px;
   margin-left: -40px;
 }
