--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -16,6 +16,7 @@
   border-radius: 15px;
   color: rgba(255, 225, 0, 0.993);
   background-color: rgb(117, 8, 117);
+  transition: transform 255ms cubic-bezier(0.1, 0.3, 0.4, 0.5);
 }
 
 .show-btn:hover,
@@ -47,7 +48,8 @@
   display: none;
 }
 
-.button-up:hover {
+.button-up:hover,
+.button-up:focus {
   transform: scale(1.1);
 }
 
